--- a/.github/workflows/pull-request-master.yml
+++ b/.github/workflows/pull-request-master.yml
@@ -7,6 +7,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    
     steps:
     - uses: actions/checkout@v2
 
@@ -20,3 +21,18 @@ jobs:
 
     - name: Build the example app
       run: ./gradlew build --stacktrace
+  
+  unit-tests:
+    runs-on: ubuntu-latest
+    needs: [build]
+    
+    steps:
+    - uses: actions/checkout@v2
+
+    - name: Set up JDK
+      uses: actions/setup-java@v1.4.2
+      with:
+        java-version: 1.8
+    
+    - name: Unit tests
+      run: ./gradlew clean :simplepdfviewer:test
