--- a/.github/workflows/pull-request-master.yml
+++ b/.github/workflows/pull-request-master.yml
@@ -35,4 +35,22 @@ jobs:
         java-version: 1.8
     
     - name: Unit tests
-      run: ./gradlew clean :simplepdfviewer:test
+      run: ./gradlew :simplepdfviewer:test --stacktrace
+  
+  instrumented-tests:
+    runs-on: macos-latest
+    needs: [unit-tests]
+    
+    steps:
+    - uses: actions/checkout@v2
+
+    - name: Set up JDK
+      uses: actions/setup-java@v1.4.2
+      with:
+        java-version: 1.8
+    
+    - name: Instrumented tests
+      uses: reactivecircus/android-emulator-runner@v2
+      with:
+        api-level: 30
+        script: ./gradlew :simplepdfviewer:connectedAndroidTest --stacktrace
